# iam-action-catalog

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
iam_action_catalog/: __main__.py  access_fetcher.py  action_catalog.py  api.py  iam.py  policy_holder.py  settings.py  utils.py
iam_action_catalog/iam_resources/: __init__.py  policy.py  policy_holder.py  types.py  utils.py
