[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-action-catalog"
version = "0.4.0"
description = "CLI tool to extract AWS IAM action definitions with last_accessed_trackable flag"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nagumo Takanobu", email = "nagumo5683@gmail.com" }
]
dependencies = [
  "beautifulsoup4==4.13.4",
  "boto3==1.38.14",
  "mypy-boto3-iam==1.38.14"
]

[project.scripts]
iam-action-catalog = "iam_action_catalog.__main__:main"

[project.optional-dependencies]
dev = [
  "ruff==0.11.7",
  "build==1.2.2.post1"
]

[tool.setuptools]
packages = ["iam_action_catalog"]
include-package-data = false
